--- a/requirements.txt
+++ b/requirements.txt
@@ -104,3 +104,14 @@ websocket-client==1.8.0
 websockets==14.2
 wrapt==1.17.2
 zipp==3.21.0
+
+fastapi>=0.68.0
+uvicorn>=0.15.0
+streamlit>=1.32.0
+sentence-transformers>=2.6.0
+chromadb>=0.4.24
+elasticsearch>=8.13.0
+pypdf>=3.17.0
+nltk>=3.8.1
+openai>=1.0.0
+python-dotenv>=0.19.0
