--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ grpcio==1.70.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
-httpx==0.28.1
+httpx==0.27.2
 huggingface-hub==0.28.1
 humanfriendly==10.0
 idna==3.10
@@ -113,5 +113,5 @@ chromadb>=0.4.24
 elasticsearch>=8.13.0
 pypdf>=3.17.0
 nltk>=3.8.1
-openai>=1.0.0
+openai==1.55.3
 python-dotenv>=0.19.0
